--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@property --maskScale {
+  syntax: "<length>";
+  initial-value: 64px;
+  inherits: false;
+}
+
+@keyframes maskClose {
+  to {
+    --maskSale: 0px;
+  }
+}
+
 @layer utilities {
   .bg-clip-text {
     background-clip: text;
@@ -13,5 +25,28 @@
 
   .bg-h-max {
     background-size: auto 100%;
+  }
+}
+
+@layer components {
+  div[data-mask-img] {
+    position: relative;
+  }
+
+  div[data-mask-img]::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-image: inherit;
+    background-color: inherit;
+    background-size: inherit;
+
+    clip-path: circle(
+      var(--maskScale) at var(--maskX, -64px) var(--maskY, -64px)
+    );
+    /* animation: maskClose 5s ease-out forwards; */
   }
 }
