--- a/src/index.css
+++ b/src/index.css
@@ -544,6 +544,10 @@ video {
   position: absolute;
 }
 
+.z-10{
+  z-index: 10;
+}
+
 .grid{
   display: grid;
 }
@@ -564,12 +568,12 @@ video {
   min-height: 100vh;
 }
 
-.w-1\/2{
-  width: 50%;
-}
-
 .w-2{
   width: 0.5rem;
+}
+
+.w-\[560px\]{
+  width: 560px;
 }
 
 .w-full{
@@ -586,6 +590,10 @@ video {
 
 .cursor-none{
   cursor: none;
+}
+
+.resize{
+  resize: both;
 }
 
 .place-items-center{
@@ -608,6 +616,16 @@ video {
 .bg-cursor{
   --tw-bg-opacity: 1;
   background-color: rgb(52 64 77 / var(--tw-bg-opacity));
+}
+
+.transition-transform{
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-200{
+  transition-duration: 200ms;
 }
 
 @property --maskScale {
